Opened 15 years ago

Closed 15 years ago

#4697 closed bug (fixed)

"raw_char" keyboard problems in latest SVN

Reported by: rogueeve Owned by: korli
Priority: normal Milestone: R1
Component: Servers/input_server Version: R1/Development
Keywords: Cc: phoudoin
Blocked By: Blocking:
Platform: All

Description

I just pulled down the latest SVN, built, and upgraded (upgrading from R33109). After I came back up the keyboard was messed up in the following way:

  • when typing "/", "/raw_char" would appear on screen.
  • when typing "\", "\raw_char" would appear on screen.

I rolled back the input_server and rebooted, did not fix it. Rolled back the kernel and associated files. Then rolled back all files under "lib". None of these things fixed the issue.

Change History (9)

comment:1 by luroh, 15 years ago

Upgraded? There is no bullet proof upgrade procedure yet, afaik. Building fresh and reinstalling is the name of the game.

in reply to:  1 comment:2 by rogueeve, 15 years ago

That's what I meant, the same way I always do it: I rebuilt from SVN, mounted the resulting image, and dragged the system folder off into my test partition.

comment:3 by luroh, 15 years ago

With all due respect, that's not what I'd call a fresh install. Frankensteining files from one system to another may work most of the time but it can also fail. It is not uncommon to hear of similar problems in #haiku on IRC. It's also advisable to always build fresh and test again before reporting a problem. Just to illustrate; in my (cross-compiling) case, building fresh means removing any files in generated/, removing attributes/, objects/ and tmp/ folders. If buildtools/ has seen new commits, the build/ and cross-tools/ folders get nuked too.

comment:4 by luroh, 15 years ago

Oh, and I should probably add that I don't trust 'jam update-all' either, it didn't take long before it bit me in the behind. :)

comment:5 by rogueeve, 15 years ago

Well I can not easily just wipe everything and start over because I use Haiku as my main OS, and all my settings etc are on this partition. However you are absolutely right and it turned out that that is exactly what the problem was. I think it was one of the settings files that must have slightly changed it's format. I probably should have investigated it further before calling it a bug but I was distracted by another project yesterday and wasn't TOO concerned about upgrading and so didn't really finish looking into it.

So in short: Nothing to see here! Just chalk it up to user error!

comment:6 by humdinger, 15 years ago

I have a similar problem with WonderBrush's canvas size dialog. See http://www.freelists.org/post/haiku-development/raw-char-in-WonderBrush-dialog

Do you remember which settings file fixed your issue?

comment:7 by phoudoin, 15 years ago

Cc: phoudoin added

comment:8 by rogueeve, 15 years ago

I never actually tracked it down unfortunately, I did a clean install to my test partition and rebooted into it to see if the problem manifested on a clean install; it did not. While in there I once again copied the system folder over from the test install to my main partition, and this time the problem was gone.

I believe I may have been mixing and matching the servers, I have some hacks I've done to my app_server having to do with quick window resizing, and I wanted to try to keep them without having to reapply the patches, so I may have initially left the app_server and possibly a couple of other things unupgraded (I know, that all seems probably like I was just asking for trouble, but I have actually "upgraded" this way 5 or 6 times and it has always worked flawlessly except for this last time).

I tested my WonderBrush (which is on the system which was previously having this issue) and am not experiencing your issue. Running R33411.

Did you do a completely fresh install? I would suggest backing up your home/config/settings directory and then just wiping it; if that doesn't solve the problem back up your "system" directory from another partition and then wipe it and reinstall. Once it starts working again you can start narrowing it down. That is what I was planning to do but then the problem miraculously disappeared so I didn't get the chance.

comment:9 by mmlr, 15 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev33442. It was an oversight in hrev33338 which pretends to add a string but missed to add the terminating 0.

As a general note, revisions are lower case r + number, not upper case R. Releases are denoted with an upper case R. If you write it that way the bug tracker will automatically make useful links out of it as well.

Note: See TracTickets for help on using tickets.