Include the terminating 0 byte when adding as string type. Otherwise someone reading the message as an actual string will run into problems. Should fix #4697.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33442 a95241bf-73f2-0310-859d-f6bbb57e9c96